apps/portfolio-next/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-next
  namespace: portfolio-next
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr/portfolio-next:0.1.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
