apps/portfolio-next/envs/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-next
  namespace: portfolio-next
spec:
  rules:
    - host: portfolio-next.homelab.local
